--- a/dists/iphone/Info.plist.in
+++ b/dists/iphone/Info.plist.in
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>ScummVM</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.scummvm.scummvm</string>
+	<string>com.iphsoft.ttt</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
